# DsMessenger

./: .gitignore  CMakeLists.txt  README.md
runable/: main.cpp
sdk/core/: messenger.cpp  messenger.h
sdk/export/: ds_messenger.cpp  ds_messenger.h
sdk/util/: logger.cpp  logger.h
